site title added.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container">
         <h1>Hello Git!</h1>
+        <p>This is a sample HTML file to demonstrate Git configuration.</p>
     </div>
 </body>
 </html>
